Fix issue where image can be wider than page on small screens

--- a/resources/css/imageGallery.css
+++ b/resources/css/imageGallery.css
@@ -77,5 +77,5 @@
 .slide {
     display: block;
     margin: 0 auto;
-    max-height: 500px;
+    max-width: 100%;
 }
